apparently 0000-00-00 is not a valid date. template set to not publish

--- a/_posts/0000-00-00-template.md
+++ b/_posts/0000-00-00-template.md
@@ -6,7 +6,7 @@ category: (programming|systems|empty)
 year: 2014
 month: mm
 day: dd
-published: true
+published: false
 summary: Summary line that shows up in indexes.
 ---
 
