trying to figure out how to make jekyll ignore my template by changing layout from post to toast

--- a/_posts/0000-00-00-template.md
+++ b/_posts/0000-00-00-template.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: toast
 title: Title of the post
 tags: linux osx python udev vim xfce
 category: (programming|systems|empty)
@@ -18,8 +18,10 @@ To use this template:
 =====================
 
  - Make a copy
- - Vhange the file name
- - Update the header info, make sure to change published to false
+ - Change the file name
+ - Update the header info
+  * Change layout from `toast` to `post`
+  * change published to `true'
  - Delete these quick notes!
 
 Add a tag!
