trying to make jekyll happy

--- a/_posts/1000-10-10-template.md
+++ b/_posts/1000-10-10-template.md
@@ -1,5 +1,5 @@
 ---
-layout: toast
+layout: post
 title: Title of the post
 tags: linux osx python udev vim xfce
 category: (programming|systems|empty)
@@ -20,7 +20,6 @@ To use this template:
  - Make a copy
  - Change the file name
  - Update the header info
-  * Change layout from `toast` to `post`
   * change published to `true'
  - Delete these quick notes!
 
