--- a/drafts/0000-00-00-template.md
+++ b/drafts/0000-00-00-template.md
@@ -6,7 +6,7 @@ category: (programming|systems|empty)
 year: 2014
 month: mm
 day: dd
-published: false
+published: true
 summary: Summary line that shows up in indexes.
 ---
 
