--- a/drafts/0000-00-00-template.md
+++ b/drafts/0000-00-00-template.md
@@ -2,7 +2,7 @@
 layout: post
 title: Title of the post
 tags: linux osx python udev vim xfce
-category: (programming|systems|empty)
+category: (programming|systems|security|random)
 year: 2014
 month: mm
 day: dd
