editing motion draft

--- a/drafts/2014-11-07-motion.md
+++ b/drafts/2014-11-07-motion.md
@@ -25,7 +25,8 @@ sudo motion
 and then look in your webbrowser at `127.0.0.1:8081`. Note that by default you have to do it from the server.
 
 
-the tricky part is getting everything to work just right. In particular...
+
+Getting it configured properly is the tricky part. I needed to make a few adjustments in particular...
  
  * Select the video device you want to use 
  * Select a new location for storing data (perferably on a different media)
@@ -33,7 +34,7 @@ the tricky part is getting everything to work just right. In particular...
  * Enable the motion tracking feature (this saves on images space when nothing is happening)
  * Allow other machines to see the server
  
-We make the following adjustments to `/etc/motion/motion.conf`
+This is done by making the following adjustments to `/etc/motion/motion.conf`
 
 ```
 daemon off
@@ -44,22 +45,25 @@ webcam_motion on
 webcam_localhost off
 ```
 
-Now the start motion manually (`sudo motion`) to check if it all works. 
-Good, but we still have work to do before it will run as a service.
-First, we need to enable it to do so by changing `/etc/defaults/motion` to the following
+After those changes, you can start motion manually (`sudo motion`) to check that everything was working right. 
+
+Getting motion to run as a service
+----------------------------------
+
+First, enable the service by changing `/etc/defaults/motion` to the following
 
 ```
 start_motion_daemon=yes
 ```
 
-Second, the service will try to run as user `motion` instead of root, but that is a problem if we want to use port 80.
-So we need to edit the sysinit script at `/etc/init.d/motion` and look for the following line
+Second, the service will try to run as user `motion` instead of root, but that was a problem since I wanted to use port 80.
+I needed to edit the sysinit script at `/etc/init.d/motion` and look for the following line
 
 ```bash
 if start-stop-daemon --start --oknode --exec $DAEMON -b --child motion ; then
 ```
 
-and remove the `--child motion` part so the line looks like this:
+Remove the `--child motion` part so the line looks like this:
 
 ```bash
 if start-stop-daemon --start --oknode --exec $DAEMON -b ; then
@@ -88,113 +92,3 @@ and add the following line to remove any files motion that are older then 3 days
 # m h dom mon dow command
 0 1 * * * /usr/bin/find /media/VIDEO -mtime +3 -and -type -f -and -name "*jpg" | xargs /bin/rm -f
 ```
-
-----------------------------------------
-
-To use this template:
-=====================
-
- - Make a copy
- - Change the file name
- - Update the header info
-  * change published to `true'
- - Delete these quick notes!
-
-Add a tag!
-----------
-
-Its fast and easy!
-
-Just go to `~/Source/notes/tags/` and add a file.md with the following content
-
-    ---
-    layout: blog_by_tag
-    title: <tagnamegoeshere> posts
-    tag: <tagnamegoeshere>
-    permalink: <tagnamegoeshere>/
-    ---
-
-Don't forget to add the tag file when you commit!
-
-Formatting
-----------
-
-_Italic_
-
-**bold**
-
-`FixedSpace`
-
-Links
------
-
-Make [External Links](www.google.com) like this.
-
-Make [Post Links]({% post_url 2014-09-04-udev-usb-mounting %}) like this.
-
-Make [Static internal Links](/about/) would go to weaselpipe.com/about/.
-
-Making [Reference Style Links][google] can be done [like][yahoo] so. Later on there should be a line like this
-
-[google]: http://www.google.com/ "This is google"
-[yahoo]: http://www.yahoo.com/ "Yahoo"
-
-
-Writing code
-------------
-
-Description of what you are looking at
-
-``` 
-Code Here
-```
-
-Quoting Text
-------------
-
-I like to quote other peoples websites
-
------------------------------
-> Line one
-> line two
-> line three
-> > Indented quote
-> > line two of indented quote
-> Line four
-> line five
-> line six
------------------------------
-
-
-Markdown lets you be lazy
-
------------------------------
-> Line one
-line two
-line three
-> > Indented quote
-> > line two of indented quote
-Line four
-line five
-> line six
------------------------------
-
-
-Lists
------
-
- * Red
- * Green
- * Blue
-
- - The number one
- - second thing
- - three
-
-
-Images
-------
-
-![Alt Text](/path/to/image.jpg "optional title")
-
-Alternatively, you can just use html syntax.
