changing motion summary

--- a/_posts/2014-11-07-motion.md
+++ b/_posts/2014-11-07-motion.md
@@ -7,7 +7,7 @@ year: 2014
 month: 11
 day: 07
 published: true
-summary: Getting motion setup as a security camera involves more then just installing it.
+summary: Getting motion setup as a security camera.
 ---
 
 Getting motion installed and working is ubuntu is pretty easy
