updating motion post

--- a/_posts/2014-11-07-motion.md
+++ b/_posts/2014-11-07-motion.md
@@ -29,7 +29,10 @@ and then look in your webbrowser at `127.0.0.1:8081`. Note that by default you h
 Getting it configured properly is the tricky part. I needed to make a few adjustments in particular...
  
  * Select the video device you want to use 
+ * Select a new video format
  * Select a new location for storing data (perferably on a different media)
+ * Split pictures up by day (otherwise the directory just gets too many files)
+ * Rename files so that they can be sorted in time order by name
  * Use the normal port 80
  * Enable the motion tracking feature (this saves on images space when nothing is happening)
  * Allow other machines to see the server
@@ -39,7 +42,12 @@ This is done by making the following adjustments to `/etc/motion/motion.conf`
 ```
 daemon off
 videodevice /dev/video1
+ffmpeg_video_codec flv
 target_dir /media/VIDEO
+snapshot_filename %m-%d/%v-%Y%m%d%H%M%S-snapshot
+jpeg_filename %Y-%m-%d/%H-%M-%S-%v-%q
+movie_filename %Y-%m-%d/%H-%M-%S-%v
+timelapse_filename %Y-%m-%d/%H-%M-timelapse
 webcam_port 80
 webcam_motion on
 webcam_localhost off
@@ -90,5 +98,5 @@ and add the following line to remove any files motion that are older then 3 days
 
 ```
 # m h dom mon dow command
-0 1 * * * /usr/bin/find /media/VIDEO -mtime +3 -and -type -f -and -name "*jpg" | xargs /bin/rm -f
+0 1 * * * /usr/bin/find /media/VIDEO -mtime +2 -and -type f -and -name "*jpg" | xargs /bin/rm -f
 ```
