updates rubber post

--- a/drafts/2014-11-12-rubber.md
+++ b/drafts/2014-11-12-rubber.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: LaTex Editing in OSX
+title: Editing LaTex in OSX Like a Boss
 tags: osx vim
 category: programming
 year: 2014
@@ -11,10 +11,9 @@ summary: Vim + Rubber + Skim = Crazy Delicious!
 ---
 
 
-Wish that your latex editor had version control built into it or had vim commands?
+Wish that your latex editor had version control built into it, or that it had vim commands?
 
-Using a program called rubber, you can build latex easily from the command line,
-and that means we can build it into vim!
+Using a program called rubber you can easily build latex documents from the command line, which means we can integrate it into vim!
 
 Install rubber using macports
 
@@ -22,7 +21,7 @@ Install rubber using macports
 sudo port install rubber
 ```
 
-Edit your `.vimrc` file
+and add the following to your `.vimrc` file
 
 ```vim
 au FileType tex set makeprg=rubber\ \-\-pdf\ \-\-warn\ all\ %
@@ -30,11 +29,11 @@ au FileType tex command Make :!rubber --pdf --warn all %
 au FileType tex command Clean :!rubber --clean %
 ```
 
-Now, while you are editing your latex file in normal mode, just type `make` and _poof_, your latex file is built!
+When you are editing your latex file in normal mode, just type `make` and _poof_, your latex file is built!
 
-But now you miss your automatic document previews that you had in TexMaker. 
-Good news everyone! We can do that too! Grab a copy of the document viewer [skim](http://skim-app.sourceforge.net/) (sorry, OSX only). 
+But what about the automatic document previews that come in TexShop and TexMaker? 
+Good news everyone, we can do that too! Grab a copy of the document viewer [Skim](http://skim-app.sourceforge.net/). 
 Go to _Skim_ > _Preferences_ > _Sync_  and enable _Check for file changes_. 
-Now, when you update the pdf file, the document will automatically be reloaded.
+Now, when you update the PDF file, the document will automatically be reloaded.
 
 And finally, to add icing to the cake grab Tim Pope's [Git Fugitive](https://github.com/tpope/vim-fugitive) and Andy Stewarts [vim-gitgutter](https://github.com/airblade/vim-gitgutter).
