updates rubber post

--- a/drafts/2014-11-12-rubber.md
+++ b/drafts/2014-11-12-rubber.md
@@ -24,12 +24,13 @@ sudo port install rubber
 and add the following to your `.vimrc` file
 
 ```vim
-au FileType tex set makeprg=rubber\ \-\-pdf\ \-\-warn\ all\ %
 au FileType tex command Make :!rubber --pdf --warn all %
 au FileType tex command Clean :!rubber --clean %
+au FileType tex inoremap " ``''<ESC>hi
+au FileType tex set spell spelllang=en_us
 ```
 
-When you are editing your latex file in normal mode, just type `make` and _poof_, your latex file is built!
+This adds the commands ``:Make`` and ``:Clean`` for tex files, as well as adds smart quotes (when you type ``"`` it automatically inserts ``\`\`''``) and spell checking!
 
 But what about the automatic document previews that come in TexShop and TexMaker? 
 Good news everyone, we can do that too! Grab a copy of the document viewer [Skim](http://skim-app.sourceforge.net/). 
