--- a/drafts/2014-11-12-rubber.md
+++ b/drafts/2014-11-12-rubber.md
@@ -30,7 +30,7 @@ au FileType tex inoremap " ``''<ESC>hi
 au FileType tex set spell spelllang=en_us
 ```
 
-This adds the commands ``:Make`` and ``:Clean`` for tex files, as well as adds smart quotes (when you type ``"`` it automatically inserts ````''``) and spell checking!
+This adds the commands ``:Make`` and ``:Clean`` for tex files, as well as adds smart quotes (when you type ``"`` it automatically inserts \`\`'') and spell checking!
 
 But what about the automatic document previews that come in TexShop and TexMaker? 
 Good news everyone, we can do that too! Grab a copy of the document viewer [Skim](http://skim-app.sourceforge.net/). 
