edits to gif page

--- a/drafts/2014-11-21-gifs.md
+++ b/drafts/2014-11-21-gifs.md
@@ -11,25 +11,26 @@ summary: Notes I took on how to make animated GIFS in OSX.
 ---
 
 I enjoy taking pictures, so I tend to take a lot of them. 
-One of the things I enjoy doing is using what I call _panda bursts_, which is basically just the camera mode where you hold down the button and it continuously takes pictures.
-The usual reason for doing this is to try to capture a moment that would otherwise pass by. 
+One of the things I enjoy is taking _panda bursts_, the name I use for the camera mode where you hold down the button and it continuously takes pictures.
+The usual reason for doing this is to try to capture a moment that would otherwise pass by - like people crashing into a tree while skiing or an eagle snatching a fish out of the water.
 Anyways, when you do this you end up with lots of pictures of which you usually only want to keep one.
 
-So, I was going through photos, selecting which ones I would post online, when I realized that my panda bursts would make really nice gifs. 
-The last time I made a gif was 14 years ago, so I need to find some instructions.
-Here are the results
+So, I was going through photos selecting which ones I wanted to post online when I realized that my panda bursts would make really nice gifs. 
+The last time I made a gif was 14 years ago, so I needed to find some instructions.
+And since these articles are really just a convenient way for me to find things I will probably forget later, I have put those instructions here!
 
 I use Picasa to organize my photo collection, so the first step was to make a directory of the pictures to use as the "frames" of the animation.
-The source images need to be decreased in size, so I exported the photos from picasa with low quality, and size 800 pixels.
-
+The source images needed to be decreased in size, so I exported the photos from picasa with low quality, and size 800 pixels.
 The next step involved using The Gimp photo editor, which has historically been a bummer since running x11 programs in OSX just feels... sad.
-Fortunately, since the last time I had used the Gimp, some nice people decided to make a native port of it for OSX, which you can download [here](http://gimp.lisanet.de/Website/News/News.html).
+Fortunately, since the last time I needed to use the Gimp some nice people decided to make a native port of it for OSX, which you can download [here](http://gimp.lisanet.de/Website/News/News.html).
+It looks fantastic, and is actually quite nice to use now.
 The version I am linking to comes with some extra plugins, otherwise you can also download from the gimps project page.
 
 Making the GIF is pretty easy, I ended up using instructions from [one of the gimp tutorials](http://www.gimp.org/tutorials/Simple_Animations/).
 Open up the first frame of the image in Gimp, and then drag the rest of the images as a group into the layer tool so they are in order.
-Once all the images are layers the order needs to be reversed (for some reason).
-Then you optimize the layers for making a GIF (this helps decrease the size by removing duplicate information) and specifiing you want to use indexed color. 
+Next, the order of the layers needs to be reversed, otherwise your animation will run backwards.
+After you are happy with the order, optimize the layers for making a GIF (this helps decrease the size by removing duplicate information) and specifiing you want to use indexed color. 
+If you do the optimization and then switch the order of the layers you will get strange artifacts.
 Finally, you export it as a looping GIF.
 
 TL;DR GIF Instructions
@@ -45,112 +46,3 @@ TL;DR GIF Instructions
 
 
 
-----------------------------------------
-
-To use this template:
-=====================
-
- - Make a copy
- - Change the file name
- - Update the header info
-  * change published to `true'
- - Delete these quick notes!
-
-Add a tag!
-----------
-
-Its fast and easy!
-
-Just go to `~/Source/notes/tags/` and add a file.md with the following content
-
-    ---
-    layout: blog_by_tag
-    title: <tagnamegoeshere> posts
-    tag: <tagnamegoeshere>
-    permalink: <tagnamegoeshere>/
-    ---
-
-Don't forget to add the tag file when you commit!
-
-Formatting
-----------
-
-_Italic_
-
-**bold**
-
-`FixedSpace`
-
-Links
------
-
-Make [External Links](www.google.com) like this.
-
-Make [Post Links]({% post_url 2014-09-04-udev-usb-mounting %}) like this.
-
-Make [Static internal Links](/about/) would go to weaselpipe.com/about/.
-
-Making [Reference Style Links][google] can be done [like][yahoo] so. Later on there should be a line like this
-
-[google]: http://www.google.com/ "This is google"
-[yahoo]: http://www.yahoo.com/ "Yahoo"
-
-
-Writing code
-------------
-
-Description of what you are looking at
-
-``` 
-Code Here
-```
-
-Quoting Text
-------------
-
-I like to quote other peoples websites
-
------------------------------
-> Line one
-> line two
-> line three
-> > Indented quote
-> > line two of indented quote
-> Line four
-> line five
-> line six
------------------------------
-
-
-Markdown lets you be lazy
-
------------------------------
-> Line one
-line two
-line three
-> > Indented quote
-> > line two of indented quote
-Line four
-line five
-> line six
------------------------------
-
-
-Lists
------
-
- * Red
- * Green
- * Blue
-
- - The number one
- - second thing
- - three
-
-
-Images
-------
-
-![Alt Text](/path/to/image.jpg "optional title")
-
-Alternatively, you can just use html syntax.
