changes the tripwire page name

--- a/drafts/2015-02-13-tripwire.md
+++ b/drafts/2015-02-13-tripwire.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-title: Tripwire
+title: Basic Tripwire Commands
 tags: linux 
 category: systems,security
 year: 2015
 month: 02
 day: 13
 published: true
-summary: Using Tripwire
+summary: The basic Tripwire commands for manually monitoring a server.
 ---
 
-Assuming you already have tripwire installed correctly, here are some of the commands that you might want to use to manually check up on things.
+Assuming you already have tripwire installed, here are the basic commands used for checking up on the status of your machine.
+
 
 ## Check system integrity 
 This is usually run as a cronjob, but can also be run manually.
