fixes category for tripwire post

--- a/_posts/2015-02-13-tripwire.md
+++ b/_posts/2015-02-13-tripwire.md
@@ -2,7 +2,7 @@
 layout: post
 title: Basic Tripwire Commands
 tags: linux 
-category: systems,security
+category: systems
 year: 2015
 month: 02
 day: 13
