updates tripwire post

--- a/_posts/2015-02-13-tripwire.md
+++ b/_posts/2015-02-13-tripwire.md
@@ -10,8 +10,9 @@ published: true
 summary: The basic Tripwire commands for manually monitoring a server.
 ---
 
-Assuming you already have tripwire installed, here are the basic commands used for checking up on the status of your machine.
+## Checking and Updating Tripwire
 
+Assuming you already have tripwire installed, here are the basic commands used for checking up on the status of your machine.
 
 ## Check system integrity 
 This is usually run as a cronjob, but can also be run manually.
@@ -27,3 +28,23 @@ Otherwise, if something changes how will you know if it is your change or someon
 ```
 sudo tripwire --update --twrfile /var/lib/tripwire/report/previous_report.twr
 ```
+
+## Modifying and updating policy and configuration files
+
+You should not keep plain text copies of your tripwire policy or configuration files laying around.
+The information in them is stored inside tripwire, and the files themselves can be recreated at any time with the following commands.
+
+```
+twadmin --print-cfgfile > twcfg.txt
+twadmin --print-polfile > twpol.txt
+```
+
+To update tripwire, simply make changes to these files, and then reencrypt them.
+
+```
+twadmin --create-cfgfile -S site.key twcfg.txt
+twadmin --create-polfile -S site.key twpol.txt
+```
+
+Since the configuration file does not not alter any Tripwire policies or files tracked by the application, it is not necessary to regenerate the Tripwire database.
+
