edits to the openvpn post

--- a/drafts/2015-03-02-openvpn.md
+++ b/drafts/2015-03-02-openvpn.md
@@ -10,7 +10,7 @@ published: true
 summary: How to setup an OpenVPN Server and Client
 ---
 
-This is a description of hwo to setup a Road Warrior VPN for a network hidden behind a NAT or gateway.
+This is a description of how to setup a Road Warrior VPN for a network hidden behind a NAT or gateway.
 The road warriors can connect from anywhere and have access to the LAN.
 
 ```
@@ -75,6 +75,7 @@ $ sudo su
 
 Now we need to create a configuration file.
 An example configuration file can be found in ``/usr/share/doc/openvpn/examples/sample-config-files/server.conf``.
+The configuration file should have the following inside it.
 
 ```
 # IP address of the interface OpenVPN should listen on (optional)
@@ -138,7 +139,7 @@ On OpenWRT Routers, this can be done by going to the ``Network > Static Routes``
 
 ```
 lan   172.31.1.0     255.255.255.0     10.0.0.3    0     1500
-``
+```
 
 ## Client Configuration
 
@@ -154,7 +155,7 @@ source vars
 
 Now we need to create the configuration or profile file that the client(s) will use to connect.
 You simply give this file to anyone you want to be able to connect to your LAN.
-NOTE: you may need to remove the lines that say ``[inline]`` in them and instead 
+NOTE: you may need to remove the lines that say ``[inline]`` in them and replace them with the line ``key-direction 1``.
 
 ```
 dev tun
