a few more edits

--- a/drafts/2015-03-02-openvpn.md
+++ b/drafts/2015-03-02-openvpn.md
@@ -153,9 +153,8 @@ source vars
 ./build-key roadwarrior
 ```
 
-Now we need to create the configuration or profile file that the client(s) will use to connect.
+Now we need to create the ``client.ovpn`` configuration (profile) file that the client(s) will use to connect.
 You simply give this file to anyone you want to be able to connect to your LAN.
-NOTE: you may need to remove the lines that say ``[inline]`` in them and replace them with the line ``key-direction 1``.
 
 ```
 dev tun
@@ -188,3 +187,6 @@ COPY CONTENTS OF ROADWARRIOR.CRT HERE
 COPY CONTENTS OF ROADWARRIOR.KEY HERE
 </key>
 ```
+
+NOTE: you may need to remove the lines that say ``[inline]`` in them and replace them with the single line ``key-direction 1``.
+
