--- a/_posts/2015-03-02-openvpn.md
+++ b/_posts/2015-03-02-openvpn.md
@@ -190,3 +190,6 @@ COPY CONTENTS OF ROADWARRIOR.KEY HERE
 
 NOTE: you may need to remove the lines that say ``[inline]`` in them and replace them with the single line ``key-direction 1``.
 
+---
+
+These instructions are based off of the guide written by [cepa.io](http://cepa.io/devlog/openvpn-server-road-warrior-client) and [OpenVPN](https://openvpn.net/index.php/open-source/documentation/howto.html#server).
