--- a/drafts/0000-00-00-template.md
+++ b/drafts/0000-00-00-template.md
@@ -20,7 +20,7 @@ To use this template:
  - Make a copy
  - Change the file name
  - Update the header info
-  * change published to `true'
+ - change published to `true'
  - Delete these quick notes!
 
 Add a tag!
@@ -41,83 +41,133 @@ Don't forget to add the tag file when you commit!
 
 Formatting
 ----------
-
-_Italic_
-
-**bold**
-
-`FixedSpace`
+ *  _Italic_
+ *  **bold**
+ *  `FixedSpace`
+ *  Abbreviations <abbr title="HYPER TEXT MARKUP">HTML</abbr>
+ *  <del>Deleted</del> and <ins>Inserted</ins>
+ *  Super<sup>script</sup> and Sub<sub>script</sub>
 
 Links
 -----
-
-Make [External Links](www.google.com) like this.
-
-Make [Post Links]({% post_url 2014-09-04-udev-usb-mounting %}) like this.
-
-Make [Static internal Links](/about/) would go to weaselpipe.com/about/.
-
-Making [Reference Style Links][google] can be done [like][yahoo] so. Later on there should be a line like this
+ *  [External Links](www.google.com)
+ *  [Post Links]({% post_url 2014-09-04-udev-usb-mounting %})
+ *  [Static internal Links](/about/) would go to weaselpipe.com/about/.
+ *  [Reference Style Links][google] 
 
 [google]: http://www.google.com/ "This is google"
-[yahoo]: http://www.yahoo.com/ "Yahoo"
-
 
 Writing code
 ------------
 
-Description of what you are looking at
-
-``` 
-Code Here
+```
+$ sudo make
 ```
 
 Quoting Text
 ------------
 
-I like to quote other peoples websites
+> Curabitur blandit tempus porttitor. 
+> Nullam quis risus eget urna mollis ornare vel eu leo. 
+> > Nullam id dolor id nibh ultricies vehicula ut id elit.
 
------------------------------
-> Line one
-> line two
-> line three
-> > Indented quote
-> > line two of indented quote
-> Line four
-> line five
-> line six
------------------------------
+Example Text
+------------
 
+Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. *Aenean eu leo quam.* Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
 
-Markdown lets you be lazy
+> Curabitur blandit tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
 
------------------------------
-> Line one
-line two
-line three
-> > Indented quote
-> > line two of indented quote
-Line four
-line five
-> line six
------------------------------
+Etiam porta **sem malesuada magna** mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.
 
+{% highlight js %}
+// Example can be run directly in your JavaScript console
 
-Lists
+// Create a function that takes two arguments and returns the sum of those arguments
+var adder = new Function("a", "b", "return a + b");
+
+// Call the function
+adder(2, 6);
+// > 8
+{% endhighlight %}
+
+### Lists
+
+Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+
+* Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+* Donec id elit non mi porta gravida at eget metus.
+* Nulla vitae elit libero, a pharetra augue.
+
+Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.
+
+1. Vestibulum id ligula porta felis euismod semper.
+2. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+3. Maecenas sed diam eget risus varius blandit sit amet non magna.
+
+Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
+
+<dl>
+  <dt>HyperText Markup Language (HTML)</dt>
+  <dd>The language used to describe and define the content of a Web page</dd>
+
+  <dt>Cascading Style Sheets (CSS)</dt>
+  <dd>Used to describe the appearance of Web content</dd>
+
+  <dt>JavaScript (JS)</dt>
+  <dd>The programming language used to build advanced Web sites and applications</dd>
+</dl>
+
+Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nullam quis risus eget urna mollis ornare vel eu leo.
+
+### Images
+
+Quisque consequat sapien eget quam rhoncus, sit amet laoreet diam tempus. Aliquam aliquam metus erat, a pulvinar turpis suscipit at.
+
+![placeholder](http://placehold.it/800x400 "Large example image")
+![placeholder](http://placehold.it/400x200 "Medium example image")
+![placeholder](http://placehold.it/200x200 "Small example image")
+
+### Tables
+
+Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Upvotes</th>
+      <th>Downvotes</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr>
+      <td>Totals</td>
+      <td>21</td>
+      <td>23</td>
+    </tr>
+  </tfoot>
+  <tbody>
+    <tr>
+      <td>Alice</td>
+      <td>10</td>
+      <td>11</td>
+    </tr>
+    <tr>
+      <td>Bob</td>
+      <td>4</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>Charlie</td>
+      <td>7</td>
+      <td>9</td>
+    </tr>
+  </tbody>
+</table>
+
+Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis. Nullam quis risus eget urna mollis ornare vel eu leo.
+
 -----
 
- * Red
- * Green
- * Blue
-
- - The number one
- - second thing
- - three
-
-
-Images
-------
-
-![Alt Text](/path/to/image.jpg "optional title")
-
-Alternatively, you can just use html syntax.
+Want to see something else added? <a href="https://github.com/poole/poole/issues/new">Open an issue.</a>
