moves all current posts to notes category

--- a/_posts/2014-10-23-trick-apt.md
+++ b/_posts/2014-10-23-trick-apt.md
@@ -2,7 +2,7 @@
 layout: post
 title: Trick apt dependencies from installing a particular package
 tags: linux apt
-category: programming
+category: notes
 year: 2014
 month: 10
 day: 23
