--- a/_posts/2014-11-07-motion.md
+++ b/_posts/2014-11-07-motion.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Motion Security Camera
-tags: linux
-category: security
+tags: linux security
+category: notes
 year: 2014
 month: 11
 day: 07
