--- a/_posts/2014-11-12-rubber.md
+++ b/_posts/2014-11-12-rubber.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Editing LaTex in OSX Like a Boss
-tags: osx vim
-category: programming
+tags: osx vim programming
+category: notes
 year: 2014
 month: 11
 day: 12
