--- a/_posts/2014-11-21-gifs.md
+++ b/_posts/2014-11-21-gifs.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Making Animated GIF Images
-tags: osx
-category: random
+tags: osx random
+category: notes
 year: 2014
 month: 11
 day: 21
