--- a/_posts/2015-02-13-tripwire.md
+++ b/_posts/2015-02-13-tripwire.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Basic Tripwire Commands
-tags: linux 
-category: systems
+tags: linux systems
+category: notes
 year: 2015
 month: 02
 day: 13
