--- a/_posts/2015-03-02-openvpn.md
+++ b/_posts/2015-03-02-openvpn.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: OpenVPN Road Warrior Setup
-tags: linux
-category: systems
+tags: linux systems
+category: notes
 year: 2015
 month: 03
 day: 02
