adds custom icons to posts

--- a/_posts/2014-11-12-rubber.md
+++ b/_posts/2014-11-12-rubber.md
@@ -3,6 +3,7 @@ layout: post
 title: Editing LaTex in OSX Like a Boss
 tags: osx vim programming
 category: notes
+icon: code
 year: 2014
 month: 11
 day: 12
