--- a/_posts/2015-02-13-tripwire.md
+++ b/_posts/2015-02-13-tripwire.md
@@ -3,6 +3,7 @@ layout: post
 title: Basic Tripwire Commands
 tags: linux systems
 category: notes
+icon: device-desktop
 year: 2015
 month: 02
 day: 13
