--- a/_posts/2015-03-02-openvpn.md
+++ b/_posts/2015-03-02-openvpn.md
@@ -3,6 +3,7 @@ layout: post
 title: OpenVPN Road Warrior Setup
 tags: linux systems
 category: notes
+icon: device-desktop
 year: 2015
 month: 03
 day: 02
