--- a/drafts/0000-00-00-template.md
+++ b/drafts/0000-00-00-template.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 title: Title of the post
-tags: linux osx python udev vim xfce
-category: (programming|systems|security|random)
+tags: linux osx python udev vim xfce programming systems security random
+category: (notes|projects)
+icon: beer #weaselpipe.com/icons
 year: 2014
 month: mm
 day: dd
