working with urls

--- a/drafts/2016-08-17-dbrks.md
+++ b/drafts/2016-08-17-dbrks.md
@@ -13,12 +13,12 @@ summary: Designing a URL shortening system to run on a sever that does not suppo
 
 URL shorting is a mixed bag. 
 There are several reasons why it is a good idea.
-For example, you can include a link such as [http://weaselpipe.com/about] in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as [https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962].  
+For example, you can include a link such as [](http://weaselpipe.com/about) in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as [](https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962).  
 Another benefit of URL shortening - try reading that last link out loud to someone over the phone... 
 Finally, long URLs are difficult to remember. 
 If we can shorten a long URL into something easier to remember, it will be easier to use. 
 Of course, shortened URLs are not all sunshine and flowers - there are many downsides to using them as well.
-For starters, you have no idea where the link  http://bit.ly/2aX1nha is going to take you.
+For starters, you have no idea where the link  [](http://bit.ly/2aX1nha) is going to take you.
 It might be a shortened link to the google maps directions to a restaruant, or it might be sending you to http://sketchylink4u.ru/supermalwareinjector.
 Another problem with shortening URLs is that it almost certainly is adding to the link-rot problem.
 Finally, let us not forget that nothing in this world is free - and if you can't identify how a service is making money then the answer is _you_.
