--- a/drafts/2016-08-17-dbrks.md
+++ b/drafts/2016-08-17-dbrks.md
@@ -13,7 +13,7 @@ summary: Designing a URL shortening system to run on a sever that does not suppo
 
 URL shorting is a mixed bag. 
 There are several reasons why it is a good idea.
-For example, you can include a link such as [](http://weaselpipe.com/about) in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as [](https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962).  
+For example, you can include a link such as <http://weaselpipe.com/about> in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as [](https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962).  
 Another benefit of URL shortening - try reading that last link out loud to someone over the phone... 
 Finally, long URLs are difficult to remember. 
 If we can shorten a long URL into something easier to remember, it will be easier to use. 
