--- a/drafts/2016-08-17-dbrks.md
+++ b/drafts/2016-08-17-dbrks.md
@@ -13,13 +13,13 @@ summary: Designing a URL shortening system to run on a sever that does not suppo
 
 URL shorting is a mixed bag. 
 There are several reasons why it is a good idea.
-For example, you can include a link such as <http://weaselpipe.com/about> in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as [](https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962).  
+For example, you can include a link such as <http://weaselpipe.com/about> in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as <https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962>.  
 Another benefit of URL shortening - try reading that last link out loud to someone over the phone... 
 Finally, long URLs are difficult to remember. 
 If we can shorten a long URL into something easier to remember, it will be easier to use. 
 Of course, shortened URLs are not all sunshine and flowers - there are many downsides to using them as well.
-For starters, you have no idea where the link  [](http://bit.ly/2aX1nha) is going to take you.
-It might be a shortened link to the google maps directions to a restaruant, or it might be sending you to http://sketchylink4u.ru/supermalwareinjector.
+For starters, you have no idea where the link  <http://bit.ly/2aX1nha> is going to take you.
+It might be a shortened link to the google maps directions to a restaruant, or it might be sending you to <http://sketchylink4u.ru/supermalwareinjector>.
 Another problem with shortening URLs is that it almost certainly is adding to the link-rot problem.
 Finally, let us not forget that nothing in this world is free - and if you can't identify how a service is making money then the answer is _you_.
 In between you entering that short URL and being taken (hopefully) to you destination, the server providing the short URL could be doing anything including collecting information about you they will later sell to people. 
@@ -44,10 +44,10 @@ I already own several URLs, so purchasing another one was not a big deal.
 I also had access to a public facing web server that is run my the university I attend. 
 The university's webserver allows people to run websites out of their user's home directory by putting files inside of a ``public_html`` directory.
 In fact, I was already running a website from this location, so my URL shortening service would have to live as a subdirectory of this existing site.
-Unfortunately, this means that my brand new short URL, dbrks.co, would need to be pointed at a rather long URL to begin with... [http://www.cs.uml.edu/~dbrooks/links], and that is not really how DNS works.
+Unfortunately, this means that my brand new short URL, <dbrks.co>, would need to be pointed at a rather long URL to begin with... <http://www.cs.uml.edu/~dbrooks/links>, and that is not really how DNS works.
 But, it turns out that for the first time ever my DNS registrar (GoDaddy) actually provided me with a useful feature - "URL forwarding".
 Ironically, they implement this service by repling to requests to your domain with a 302 redirect reply (the same technique I planned to usefor my URL shortening).
-So, now I could type in [dbrks.co] into my browser and it would land me in the location I would be hosting my URL shortener at [http://www.cs.uml.edu/~dbrooks/links].
+So, now I could type in <dbrks.co> into my browser and it would land me in the location I would be hosting my URL shortener at <http://www.cs.uml.edu/~dbrooks/links>.
 The next step was to make that magical location redirect to arbitrary other websites.
 
 ### htaccess redirecting
@@ -62,7 +62,7 @@ RewriteRule ^test1$ http://www.google.com [r=302,NE,L]
 RewriteRule ^test2$ http://www.yahoo.com [r=302,NE,L]
 ```
 
-This file would redirect the url [http://www.cs.uml.edu/~dbrooks/links/test1] , as well as [http://dbrks.co/test1], to google and [http://dbrks.co/test2] to yahoo.
+This file would redirect the url <http://www.cs.uml.edu/~dbrooks/links/test1> , as well as <http://dbrks.co/test1>, to google and <http://dbrks.co/test2> to yahoo.
 Additionally, it provides a tiny bit of "security" by blocking people access to viewing the actual htaccess file. The ``NE`` tells the server not to escape special characters (basically allowing you to type in the URL's to redirect to verbatim).
 This worked perfectly just as I had planned and I was ready to begin the final phase of my plans - profit.
 
@@ -89,10 +89,10 @@ I then wrote a short python script that
  5) creates an index file for convenience
 
 I then set this script to run every few minutes on the server.
-The results: URL management and editing security managed by github at dbrks.co/edit
+The results: URL management and editing security managed by github at <http://dbrks.co/edit>
 
 
-You can see the code and try it out at the same time here -http://dbrks.co/example
+You can see the code and try it out at the same time at <http://dbrks.co/example>
 
 ----------------------------------------
 
