--- a/drafts/2016-08-17-dbrks.md
+++ b/drafts/2016-08-17-dbrks.md
@@ -11,22 +11,29 @@ published: true
 summary: Designing a URL shortening system to run on a sever that does not support scripts.
 ---
 
-URL shorting is a mixed bag. 
-There are several reasons why it is a good idea.
-For example, you can include a link such as <http://weaselpipe.com/about> in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as <https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962>.  
+URL shorting is a mixed bag - there are a number reasons why it is a great idea, but also just as many reasons why it isn't.
+But first, let's talk about why people like it.
+To start, you can include a link such as <http://weaselpipe.com/about> in a paragraph of text and it still reads nicely, unlike links that include endless amounts of ``GET`` data such as in the example below
+
+```
+https://www.google.com/maps/place/Clover/@42.3611971,-71.1220626,12z/data=!4m8!1m2!2m1!1sfood!3m4!1s0x89e37a1241557ee1:0xad192345b4105ba0!8m2!3d42.3729277!4d-71.1178962  
+```
+
 Another benefit of URL shortening - try reading that last link out loud to someone over the phone... 
 Finally, long URLs are difficult to remember. 
 If we can shorten a long URL into something easier to remember, it will be easier to use. 
 Of course, shortened URLs are not all sunshine and flowers - there are many downsides to using them as well.
-For starters, you have no idea where the link  <http://bit.ly/2aX1nha> is going to take you.
-It might be a shortened link to the google maps directions to a restaruant, or it might be sending you to <http://sketchylink4u.ru/supermalwareinjector>.
+The most obvious problem with shortened URLs is that you have no idea where links, such as <http://bit.ly/2aX1nha>, are going to take you.
+It might just be a shortcut to some location in google maps, but it could just as easily be sending you to <http://sketchylink4u.ru/supermalwareinjector>.
 Another problem with shortening URLs is that it almost certainly is adding to the link-rot problem.
-Finally, let us not forget that nothing in this world is free - and if you can't identify how a service is making money then the answer is _you_.
-In between you entering that short URL and being taken (hopefully) to you destination, the server providing the short URL could be doing anything including collecting information about you they will later sell to people. 
+Not only could the target page disappear in the future, but the URL shortening service might discard old or unused addresses (or even disappear itself).
+Finally, let us not forget that nothing in this world is free. 
+If you can't identify how a service is making money then the answer is _you_.
+In between when you enter that short URL into your browser and being taken (hopefully) to you destination, the server providing the short URL could be doing anything - including collecting information about you they will later sell to people. 
 
 
-However, many of the problems with URL shortening can be eliminated if the service you are using to shorten URLs actually belongs to you.
-It had never occured to me that I could run my own URL shortener until recently when I received an email from a friend of mine in which he included several shortened URLs hosted by his own server. 
+However, it recently occured to me that many of the problems with URL shortening can be eliminated if the shortening service actually belongs to you.
+It had never occured to me that I could run my own URL shortener until a few days ago when I received an email from a friend in which he included several shortened URLs hosted by his own server. 
 That's when it occured to me that 1) my friend knows where each of these links goes because he made them, 2) he can control whether or not the short URL expires, and 3) he knows whether or not he is selling data about his friends to advertising companies. 
 It also occured to me that I actually already understood how URL shortening services worked - or at least I knew how I could make one very easily. 
 And that's when I decided I wanted my own URL shortening service.
@@ -34,17 +41,18 @@ And that's when I decided I wanted my own URL shortening service.
 
 My strategy was very straight forward:
 
- * Acquire a very short base URL
- * Link it to a public web server (running Apache) that I have access to
- * Use a .htaccess file to respond to HTTP requests with 302 redirect messages
- * Profit
+ 1. Acquire a very short base URL
+ 2. Link it to a public web server (running Apache) that I have access to
+ 3. Use a .htaccess file to respond to HTTP requests with 302 redirect messages
+ 4. Profit
 
 ### Setting up the short base URL
 I already own several URLs, so purchasing another one was not a big deal. 
 I also had access to a public facing web server that is run my the university I attend. 
 The university's webserver allows people to run websites out of their user's home directory by putting files inside of a ``public_html`` directory.
 In fact, I was already running a website from this location, so my URL shortening service would have to live as a subdirectory of this existing site.
-Unfortunately, this means that my brand new short URL, <dbrks.co>, would need to be pointed at a rather long URL to begin with... <http://www.cs.uml.edu/~dbrooks/links>, and that is not really how DNS works.
+Unfortunately, this means that my brand new short URL, <http://dbrks.co>, would need to be pointed at a rather long URL to begin with <http://www.cs.uml.edu/~dbrooks/links>.
+Also, that is not really how DNS works.
 But, it turns out that for the first time ever my DNS registrar (GoDaddy) actually provided me with a useful feature - "URL forwarding".
 Ironically, they implement this service by repling to requests to your domain with a 302 redirect reply (the same technique I planned to usefor my URL shortening).
 So, now I could type in <dbrks.co> into my browser and it would land me in the location I would be hosting my URL shortener at <http://www.cs.uml.edu/~dbrooks/links>.
@@ -82,11 +90,11 @@ This gave me an idea - I could store my links on github, and use the servers cro
 To further improve the link management process, I created a simple configuration file that stores short names and the corresponding long urls that is easy to edit. 
 I then wrote a short python script that 
 
- 1) checks to see if the github repository has been updated
- 2) downloads the updates
- 3) parses the configuration file
- 4) generates a new htaccess file
- 5) creates an index file for convenience
+ 1. checks to see if the github repository has been updated
+ 2. downloads the updates
+ 3. parses the configuration file
+ 4. generates a new htaccess file
+ 5. creates an index file for convenience
 
 I then set this script to run every few minutes on the server.
 The results: URL management and editing security managed by github at <http://dbrks.co/edit>
